--- a/ML100/017.ipynb
+++ b/ML100/017.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 4
     }
    ],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 32
+     "execution_count": 6
     }
    ],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -172,12 +172,49 @@
       ]
      },
      "metadata": {},
-     "execution_count": 34
+     "execution_count": 8
     }
    ],
    "source": [
     "# 觀察等頻劃分下, 每個種組距各出現幾次\n",
     "ages[\"equal_freq_age\"].value_counts() # 每個 bin 的資料筆數是一樣的"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "    age equal_width_age customized_age_grp  equal_freq_age\n",
+       "0    18  (6.907, 30.25]           (10, 20]  (6.999, 20.25]\n",
+       "1    22  (6.907, 30.25]           (20, 30]   (20.25, 26.0]\n",
+       "2    25  (6.907, 30.25]           (20, 30]   (20.25, 26.0]\n",
+       "3    27  (6.907, 30.25]           (20, 30]    (26.0, 42.0]\n",
+       "4     7  (6.907, 30.25]            (0, 10]  (6.999, 20.25]\n",
+       "5    21  (6.907, 30.25]           (20, 30]   (20.25, 26.0]\n",
+       "6    23  (6.907, 30.25]           (20, 30]   (20.25, 26.0]\n",
+       "7    37   (30.25, 53.5]           (30, 50]    (26.0, 42.0]\n",
+       "8    30  (6.907, 30.25]           (20, 30]    (26.0, 42.0]\n",
+       "9    61   (53.5, 76.75]          (50, 100]   (42.0, 100.0]\n",
+       "10   45   (30.25, 53.5]           (30, 50]   (42.0, 100.0]\n",
+       "11   41   (30.25, 53.5]           (30, 50]    (26.0, 42.0]\n",
+       "12    9  (6.907, 30.25]            (0, 10]  (6.999, 20.25]\n",
+       "13   18  (6.907, 30.25]           (10, 20]  (6.999, 20.25]\n",
+       "14   80  (76.75, 100.0]          (50, 100]   (42.0, 100.0]\n",
+       "15  100  (76.75, 100.0]          (50, 100]   (42.0, 100.0]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>age</th>\n      <th>equal_width_age</th>\n      <th>customized_age_grp</th>\n      <th>equal_freq_age</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>18</td>\n      <td>(6.907, 30.25]</td>\n      <td>(10, 20]</td>\n      <td>(6.999, 20.25]</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>22</td>\n      <td>(6.907, 30.25]</td>\n      <td>(20, 30]</td>\n      <td>(20.25, 26.0]</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>25</td>\n      <td>(6.907, 30.25]</td>\n      <td>(20, 30]</td>\n      <td>(20.25, 26.0]</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>27</td>\n      <td>(6.907, 30.25]</td>\n      <td>(20, 30]</td>\n      <td>(26.0, 42.0]</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>7</td>\n      <td>(6.907, 30.25]</td>\n      <td>(0, 10]</td>\n      <td>(6.999, 20.25]</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>21</td>\n      <td>(6.907, 30.25]</td>\n      <td>(20, 30]</td>\n      <td>(20.25, 26.0]</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>23</td>\n      <td>(6.907, 30.25]</td>\n      <td>(20, 30]</td>\n      <td>(20.25, 26.0]</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>37</td>\n      <td>(30.25, 53.5]</td>\n      <td>(30, 50]</td>\n      <td>(26.0, 42.0]</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>30</td>\n      <td>(6.907, 30.25]</td>\n      <td>(20, 30]</td>\n      <td>(26.0, 42.0]</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>61</td>\n      <td>(53.5, 76.75]</td>\n      <td>(50, 100]</td>\n      <td>(42.0, 100.0]</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>45</td>\n      <td>(30.25, 53.5]</td>\n      <td>(30, 50]</td>\n      <td>(42.0, 100.0]</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>41</td>\n      <td>(30.25, 53.5]</td>\n      <td>(30, 50]</td>\n      <td>(26.0, 42.0]</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>9</td>\n      <td>(6.907, 30.25]</td>\n      <td>(0, 10]</td>\n      <td>(6.999, 20.25]</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>18</td>\n      <td>(6.907, 30.25]</td>\n      <td>(10, 20]</td>\n      <td>(6.999, 20.25]</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>80</td>\n      <td>(76.75, 100.0]</td>\n      <td>(50, 100]</td>\n      <td>(42.0, 100.0]</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>100</td>\n      <td>(76.75, 100.0]</td>\n      <td>(50, 100]</td>\n      <td>(42.0, 100.0]</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "ages"
    ]
   },
   {
