--- a/ML100/021.ipynb
+++ b/ML100/021.ipynb
@@ -150,20 +150,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Training data shape:  (307511, 240)\n",
-      "Testing data shape:  (48744, 240)\n"
+      "Training data shape:  (307511, 240)\nTesting data shape:  (48744, 240)\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.preprocessing import MinMaxScaler, Imputer\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.impute import SimpleImputer\n",
     "\n",
     "# 特徵欄位清單\n",
     "train = app_train\n",
@@ -173,7 +173,7 @@
     "test = app_test.copy()\n",
     "\n",
     "# 填補器 : 設定缺失值補中位數\n",
-    "imputer = Imputer(strategy = 'median')\n",
+    "imputer = SimpleImputer(strategy = 'median')\n",
     "\n",
     "# 縮放器 : 設定特徵縮放到 0~1 區間\n",
     "scaler = MinMaxScaler(feature_range = (0, 1))\n",
@@ -203,21 +203,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "LogisticRegression(C=0.0001, class_weight=None, dual=False,\n",
-       "          fit_intercept=True, intercept_scaling=1, max_iter=100,\n",
-       "          multi_class='ovr', n_jobs=1, penalty='l2', random_state=None,\n",
-       "          solver='liblinear', tol=0.0001, verbose=0, warm_start=False)"
+       "LogisticRegression(C=0.0001)"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 8
     }
    ],
    "source": [
@@ -239,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -259,88 +256,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Python\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
-     ]
-    },
-    {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SK_ID_CURR</th>\n",
-       "      <th>TARGET</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>100001</td>\n",
-       "      <td>0.065051</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>100005</td>\n",
-       "      <td>0.126401</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>100013</td>\n",
-       "      <td>0.081239</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>100028</td>\n",
-       "      <td>0.061509</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>100038</td>\n",
-       "      <td>0.128308</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
        "   SK_ID_CURR    TARGET\n",
-       "0      100001  0.065051\n",
-       "1      100005  0.126401\n",
-       "2      100013  0.081239\n",
-       "3      100028  0.061509\n",
-       "4      100038  0.128308"
-      ]
+       "0      100001  0.065383\n",
+       "1      100005  0.117354\n",
+       "2      100013  0.067974\n",
+       "3      100028  0.070889\n",
+       "4      100038  0.117988"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SK_ID_CURR</th>\n      <th>TARGET</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>100001</td>\n      <td>0.065383</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>100005</td>\n      <td>0.117354</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>100013</td>\n      <td>0.067974</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>100028</td>\n      <td>0.070889</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>100038</td>\n      <td>0.117988</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 10
     }
    ],
    "source": [
@@ -353,10 +286,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "submit.to_csv('result.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -377,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.3-final"
   }
  },
  "nbformat": 4,
