--- a/ML100/021.ipynb
+++ b/ML100/021.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "source": [
     "# [作業目標]\n",
-    "- 檢視並重新執行腳本, 試著將執行結果存檔並提交到 Kaggle 上"
+    "- 檢視並重新執行腳本, 試著將執行結果存檔並提交到 Kaggle 上 https://www.kaggle.com/c/home-credit-default-risk"
    ]
   },
   {
